# GridfourC

./: .gitignore  LICENSE  README.md
GvrsC/: CMakeLists.txt
GvrsC/doxygen/: GvrsDoxyfile.txt
GvrsC/examples/: EntropyTabulator.c  ExampleLocation.c  GvrsRead.c  GvrsReadPerformance.c  TestFileTranscribe.c  TestLargeFile.c
GvrsC/include/: Gvrs.h  GvrsBuilder.h  GvrsCodec.h  GvrsCompressHuffman.h  GvrsCrossPlatform.h  GvrsDeflateExtensions.h  GvrsError.h  GvrsFramework.h  GvrsInternal.h  GvrsInterpolation.h  GvrsMetadata.h  GvrsPrimaryIo.h  GvrsPrimaryTypes.h  desktop.ini
GvrsC/src/: Gvrs.c  GvrsBitInput.c  GvrsBitOutput.c  GvrsBspline.c  GvrsBuilder.c  GvrsChecksum.c  GvrsCodecCanonicalHuffman.c  GvrsCodecDeflate.c  GvrsCodecFloat.c  GvrsCodecHuffman.c  GvrsCodecLsop.c  GvrsCrossPlatform.c  GvrsDeflateExtensions.c  GvrsElement.c  GvrsError.c  GvrsFileSpaceManager.c  GvrsInterpolation.c  GvrsM32.c  GvrsMetadata.c  GvrsPredictor.c  GvrsPrimaryIo.c  GvrsRecord.c  GvrsRecordManager.c  GvrsSummarize.c  GvrsTileCache.c  GvrsTileDirectory.c
GvrsC/test/: README.txt  Test000_ReadPrimitives.c  Test001_ReadRecords.c
